# scraping-utils

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/scraping_utils/: __init__.py
src/scraping_utils/core/: __init__.py  settings.py
src/scraping_utils/domain/entities/: website.py
src/scraping_utils/domain/repositories/: website_repository.py
src/scraping_utils/infrastructure/db/: database.py  service.py
src/scraping_utils/infrastructure/db/models/: __init__.py  scraped_data.py
src/scraping_utils/infrastructure/orchestration/: file_tasks.py  scraping_tasks.py
src/scraping_utils/infrastructure/scraper/: base_scraper.py  fircrawl_repository.py  gg_deals_repository.py  solotodo_repository.py
